--- a/package.json
+++ b/package.json
@@ -13,69 +13,64 @@
     "velite:watch": "velite dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/mdx": "15.0.0",
-    "@react-spring/web": "^9.7.5",
-    "@storybook/test": "^8.3.6",
-    "@types/node": "22.7.8",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@next/mdx": "15.1.2",
+    "@storybook/test": "^8.4.7",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "15.1.2",
     "gray-matter": "^4.0.3",
-    "next": "15.0.0",
-    "next-intl": "^3.22.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-aria-components": "^1.4.1",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-intl": "^6.8.1",
+    "motion": "^11.15.0",
+    "next": "15.1.2",
+    "next-intl": "^3.26.3",
+    "react": "19.0.0",
+    "react-aria-components": "^1.5.0",
+    "react-dom": "19.0.0",
+    "react-intl": "^7.0.4",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@chromatic-com/storybook": "^2.0.2",
-    "@eslint/compat": "^1.2.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.13.0",
+    "@babel/core": "^7.26.0",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@mdx-js/react": "^3.1.0",
-    "@storybook/addon-actions": "^8.3.6",
-    "@storybook/addon-docs": "^8.3.6",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-mdx-gfm": "^8.3.6",
-    "@storybook/nextjs": "^8.3.6",
-    "@storybook/react": "^8.3.6",
+    "@storybook/addon-actions": "^8.4.7",
+    "@storybook/addon-docs": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-mdx-gfm": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
     "@tailwindcss/typography": "^0.5.15",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "@types/eslint__js": "^8.42.3",
     "@types/negotiator": "^0.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@types/node": "22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
-    "eslint": "9.13.0",
-    "eslint-plugin-storybook": "^0.10.1",
-    "postcss": "^8.4.47",
-    "prettier": "3.3.3",
-    "storybook": "^8.3.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "velite": "0.2.0"
+    "eslint": "9.17.0",
+    "eslint-plugin-storybook": "^0.11.1",
+    "postcss": "^8.4.49",
+    "prettier": "3.4.2",
+    "storybook": "^8.4.7",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.18.1",
+    "velite": "0.2.2"
   },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
-  }
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
