--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "lint:fix": "biome lint --apply .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -22,7 +24,6 @@
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
-    "eslint-config-next": "16.0.0",
     "gray-matter": "^4.0.3",
     "motion": "^12.23.24",
     "next": "16.0.0",
@@ -34,34 +35,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
+    "@biomejs/biome": "^2.2.6",
     "@chromatic-com/storybook": "^4.1.1",
     "@content-collections/core": "^0.11.1",
     "@content-collections/next": "^0.2.8",
-    "@eslint/compat": "^1.4.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.38.0",
     "@mdx-js/react": "^3.1.1",
     "@storybook/addon-docs": "^9.1.13",
     "@storybook/addon-links": "^9.1.13",
     "@storybook/nextjs": "^9.1.13",
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.19",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/negotiator": "^0.6.4",
     "@types/node": "24.9.1",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
     "babel-loader": "^10.0.0",
-    "eslint": "9.38.0",
-    "eslint-plugin-storybook": "^9.1.13",
     "postcss": "^8.5.6",
-    "prettier": "3.6.2",
     "storybook": "^9.1.13",
     "tailwindcss": "^4.1.15",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.46.2",
     "zod": "^4.1.12"
   },
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
