--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "alvinvin00.github.io",
-  "version": "0.1.0",
+  "name": "djoni.dev",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -18,14 +18,22 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@mantine/carousel": "^8.3.5",
+    "@mantine/charts": "^8.3.5",
+    "@mantine/code-highlight": "^8.3.5",
     "@mantine/core": "^8.3.5",
+    "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "@mantine/modals": "^8.3.5",
     "@mantine/notifications": "^8.3.5",
+    "@mantine/nprogress": "^8.3.5",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
     "motion": "^12.23.24",
     "next": "16.0.0",
@@ -34,7 +42,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-intl": "^7.1.14",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
