--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@mantine/notifications": "^8.3.5",
     "@mantine/nprogress": "^8.3.5",
     "@tanstack/react-query": "^5.51.1",
-    "@tanstack/react-router": "^1.44.0",
-    "@tanstack/react-start": "^1.133.27",
+    "@tanstack/react-router": "^1.133.28",
+    "@tanstack/react-start": "^1.133.29",
     "@tanstack/start": "^1.44.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@unpic/react": "^1.0.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "embla-carousel": "^8.6.0",
@@ -47,7 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
-    "@biomejs/biome": "^2.2.7",
+    "@biomejs/biome": "^2.3.0",
     "@chromatic-com/storybook": "^4.1.1",
     "@content-collections/core": "^0.11.1",
     "@content-collections/vite": "^0.2.7",
