--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
@@ -25,14 +25,19 @@
     }
   },
   "files": {
-    "experimentalScannerIgnores": [
-      ".content-collections/**",
-      ".velite",
-      "node_modules/**",
-      ".next/**",
-      "out/**",
-      "build/**",
-      "next-env.d.ts"
+    "includes": [
+      "**",
+      "!!**/.content-collections",
+      "!!**/.velite",
+      "!!**/node_modules",
+      "!!**/.next",
+      "!!**/out",
+      "!!**/build",
+      "!!**/dist",
+      "!!**/.tanstack",
+      "!!**/next-env.d.ts",
+      "!!src/routeTree.gen.ts",
+      "!!src/components/Layout/AppLayout.module.css"
     ]
   }
 }
