--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "djoni.dev",
   "version": "0.5.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite dev",
+    "build": "vite build",
+    "start": "node .output/server/index.mjs",
     "lint": "biome lint",
     "format": "biome format --write ./app ./src",
     "lint:fix": "biome lint ./app ./src",
@@ -17,54 +18,56 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/react-fontawesome": "^3.1.0",
-    "@mantine/carousel": "^8.3.5",
-    "@mantine/charts": "^8.3.5",
-    "@mantine/code-highlight": "^8.3.5",
-    "@mantine/core": "^8.3.5",
-    "@mantine/form": "^8.3.5",
-    "@mantine/hooks": "^8.3.5",
-    "@mantine/modals": "^8.3.5",
-    "@mantine/notifications": "^8.3.5",
-    "@mantine/nprogress": "^8.3.5",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@mantine/carousel": "^8.3.9",
+    "@mantine/charts": "^8.3.9",
+    "@mantine/code-highlight": "^8.3.9",
+    "@mantine/core": "^8.3.9",
+    "@mantine/form": "^8.3.9",
+    "@mantine/hooks": "^8.3.9",
+    "@mantine/modals": "^8.3.9",
+    "@mantine/notifications": "^8.3.9",
+    "@mantine/nprogress": "^8.3.9",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.139.16",
+    "@tanstack/react-start": "^1.139.14",
+    "@tanstack/start": "^1.120.20",
     "@uidotdev/usehooks": "^2.4.1",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@unpic/react": "^1.0.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.18",
+    "dayjs": "^1.11.19",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
-    "motion": "^12.23.24",
-    "next": "16.0.0",
-    "next-intl": "^4.4.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "motion": "^12.23.25",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-intl": "^7.1.14",
     "react-markdown": "^10.1.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@biomejs/biome": "^2.2.7",
-    "@chromatic-com/storybook": "^4.1.1",
-    "@content-collections/core": "^0.11.1",
-    "@content-collections/next": "^0.2.8",
+    "@babel/core": "^7.28.5",
+    "@biomejs/biome": "^2.3.8",
+    "@chromatic-com/storybook": "^4.1.3",
+    "@content-collections/core": "^0.12.0",
+    "@content-collections/vite": "^0.2.7",
     "@mdx-js/react": "^3.1.1",
-    "@storybook/addon-docs": "^9.1.13",
-    "@storybook/addon-links": "^9.1.13",
-    "@storybook/nextjs": "^9.1.13",
-    "@types/negotiator": "^0.6.4",
-    "@types/node": "24.9.1",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@storybook/addon-docs": "^10.1.4",
+    "@storybook/addon-links": "^10.1.4",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "babel-loader": "^10.0.0",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "storybook": "^9.1.13",
+    "storybook": "^10.1.4",
     "typescript": "5.9.3",
-    "zod": "^4.1.12"
+    "vite": "^7.2.6",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.1.13"
   },
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
