--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-react": "^8.6.0",
     "gray-matter": "^4.0.3",
     "motion": "^12.23.25",
+    "nitro": "3.0.1-alpha.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-intl": "^7.1.14",
